# MongoDB

./: .vscode  LICENSE  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  t.py  tox.ini
experiments/: experiment.ipynb
mongoenv/: pyvenv.cfg
mongoenv/Scripts/: activate  activate.bat
tests/integration/: integration.py
