[metadata]
license = MIT
license_file = license
classifiers = 
    Programming Language = 3.8
    Programming Language = 3.9
    Programming Language = 3.10
    Programming Language = 3.11
    Operating System = OS Independant

[options]
install_requires = 
    ensure == 1.0.2
    py-youtube == 1.1.7
python_requires = >=3.8

[options.extra_require]
testing = 
    pytest >= 7.1.3
    mypy>=0.971
    flake8>=5.0.4
    tox>=3.25.1